--- a/src/main/webapp/inward/inward_timed_service_consume.xhtml
+++ b/src/main/webapp/inward/inward_timed_service_consume.xhtml
@@ -55,6 +55,7 @@
                                          style="float: right"
                                          icon="fa fa-plus"
                                          ajax="false" 
+                                         value="Add"
                                          actionListener="#{inwardTimedItemController.makeNull()}" >
                         </p:commandButton>
                         <p:commandButton 
@@ -122,7 +123,7 @@
                                 </div>
                                 <div class="row m-1">
                                     <div class="col-4">
-                                        <p:outputLabel value="StartTime:"/>
+                                        <p:outputLabel value="Start Time"/>
                                     </div>
                                     <div class="col-4">
                                         <p:calendar class="mx-2" id="startTime" value="#{inwardTimedItemController.current.fromTime}" 
@@ -130,8 +131,10 @@
                                         </p:calendar>  
                                     </div>
                                 </div>
-                                <div class="row m-1">
+                                
+                                <div class="row">
                                     <div class="col-4">
+                                        
                                         <p:commandButton class="mx-2" value="Add Service" ajax="false"
                                                          action="#{inwardTimedItemController.save}" 
                                                          />
