--- a/src/main/webapp/resources/paymentMethod/cheque.xhtml
+++ b/src/main/webapp/resources/paymentMethod/cheque.xhtml
@@ -29,7 +29,7 @@
             </div>
             
             <div class="col mx-2" >
-                <p:selectOneMenu  value="#{cc.attrs.paymentMethodData.cheque.institution}" >
+                <p:selectOneMenu  value="#{cc.attrs.paymentMethodData.cheque.institution}" style="width: 10em;">
                     <f:selectItem itemLabel="Select Bank"/>
                     <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
                     <p:ajax process="@this" ></p:ajax>
