--- a/src/main/webapp/inward/inward_bill_intrim_estimate.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim_estimate.xhtml
@@ -19,11 +19,12 @@
                 <p:panel rendered="#{bhtSummeryController.patientEncounter eq null}" >
                     
                     <f:facet name="header">
-                        <p:outputLabel value="Patient Details"/>
+                        <p:outputLabel value="Interim Bill Estimated Professional Fees"/>
                     </f:facet>
                     <h:panelGrid columns="10" >
                         <p:outputLabel value="Type Patient Name or BHT : " ></p:outputLabel>
                         <p:autoComplete  widgetVar="aPt" id="acPt" forceSelection="true" 
+                                         required="true" requiredMessage="Please select a patient"
                                          value="#{bhtSummeryController.patientEncounter}"
                                          completeMethod="#{admissionController.completePatientDishcargedNotFinalized}" 
                                          var="myItem" itemValue="#{myItem}" 
@@ -38,14 +39,9 @@
                                 #{myItem.bhtNo}
                             </p:column>
                             <p:column>
-                                #{myItem.patient.person.nameWithTitle}
+                                #{myItem.patient.person.name}
                             </p:column>
-                            <p:column>
-                                <h:outputLabel value="#{myItem.currentPatientRoom.roomFacilityCharge.name}"/>
-                            </p:column>
-                            <p:column>
-                                <h:outputLabel value="Discharged"  rendered="#{myItem.discharged}"/>
-                            </p:column>
+                            
                         </p:autoComplete>   
                         <p:commandButton ajax="false"  
                                          value="Select" 
