closes #1857 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -91,13 +91,13 @@
                                     <p:outputLabel value="Credit Limit:" rendered="#{patientController.current.hasAnAccount}" />
                                     <p:outputLabel value="#{patientController.current.creditLimit}" rendered="#{patientController.current.hasAnAccount}" />
 
-                                   
-                                    
+
+
                                 </p:panelGrid>
-                                 <!-- Barcode -->
-                                    <h:panelGroup  style="text-align: center; width: 100%;" layout="block">
-                                        <p:barcode value="#{patientController.current.idStr}" type="code39" cache="false" style="width:20%;" />
-                                    </h:panelGroup>
+                                <!-- Barcode -->
+                                <h:panelGroup  style="text-align: center; width: 100%;" layout="block">
+                                    <p:barcode value="#{patientController.current.idStr}" type="code39" cache="false" style="width:20%;" />
+                                </h:panelGroup>
                             </div>
                             <div  class="col-md-4 d-flex flex-column  gap-2" >
                                 <p:commandButton value="Admit" 
@@ -128,11 +128,23 @@
                                                  class="w-100"
                                                  styleClass="mx-2">
                                 </p:commandButton>
-                                <p:commandButton value="Accept Payments" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                <p:commandButton 
+                                    value="Accept Payments" 
+                                    action="#{patientController.navigateToPatientAcceptPayment}" 
+                                    ajax="false" 
+                                    styleClass="mx-2">
                                 </p:commandButton>
-                                <p:commandButton value="Refunds" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                <p:commandButton 
+                                    value="Refunds"
+                                    action="#{patientController.navigateToPatientRefundPayment}" 
+                                    ajax="false" 
+                                    styleClass="mx-2">
                                 </p:commandButton>
-                                <p:commandButton value="Lab Reports" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                <p:commandButton 
+                                    value="Lab Reports"
+                                    action="#{patientController.navigateToPatientLabReports}"
+                                    ajax="false"
+                                    styleClass="mx-2">
                                 </p:commandButton>
                                 <p:commandButton value="Inward Appointments"
                                                  action="#{patientController.navigateToInwardAppointmentFromPatientProfile()}"
