Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_search_intrim.xhtml
+++ b/src/main/webapp/inward/inward_search_intrim.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <p:panel header="Search Bills" style="height: 100vh" >
+                    <p:panel header="Search Interim Bills" style="height: 100vh" >
                             <div class="d-flex">
                                             <h:panelGrid columns="1">
                                                 <h:outputLabel value="From Date"/>
