Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_search_intrim.xhtml
+++ b/src/main/webapp/inward/inward_search_intrim.xhtml
@@ -23,7 +23,7 @@
 
                                                 </p:calendar>
                                                 <p:commandButton 
-                                                    class="mt-2 w-100" 
+                                                    class="mt-2 w-100 mb-3" 
                                                     ajax="false" 
                                                     action="#{searchController.createInwardIntrimBills()}"
                                                     value="Search"  />
@@ -63,7 +63,7 @@
                                             <h:outputLabel value="#{bb.insId}" ></h:outputLabel>
                                         </p:column>
 
-                                        <p:column headerText="Bht No" >
+                                        <p:column headerText="BHT No" >
                                             <h:outputLabel value="#{bb.patientEncounter.bhtNo}" ></h:outputLabel>
                                         </p:column>
 
