Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
+++ b/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
@@ -123,7 +123,7 @@
                                     class="w-100"
                                     inputStyleClass="form-control"
                                     pattern="#{sessionController.applicationPreference.longDateFormat}"
-                                    placeholder="Data of Birth (dd/MM/yyyy)"
+                                    placeholder="Date of Birth (dd/mm/yyyy)"
                                     >
                                     <f:ajax event="dateSelect" execute="@this" render="year month day" />
                                 </p:datePicker>
