--- a/src/main/webapp/inward/inward_search_service.xhtml
+++ b/src/main/webapp/inward/inward_search_service.xhtml
@@ -62,7 +62,7 @@
                                         <h:outputLabel value="#{bill.insId}"></h:outputLabel>                                
                                     </p:column>
 
-                                    <p:column headerText="Bht No">                              
+                                    <p:column headerText="BHT No">                              
                                         <h:outputLabel value="#{bill.patientEncounter.bhtNo}"  ></h:outputLabel>                                    
                                     </p:column>
 
