--- a/src/main/webapp/opd/opd_bill.xhtml
+++ b/src/main/webapp/opd/opd_bill.xhtml
@@ -27,11 +27,11 @@
                         </f:facet>
                         <p:focus id="focusIx" for="acIx" />
 
-                        <div class="row" >
+<!--                        <div class="row" >
                             <div class="col-md-12 text-center p-1" >
                                 <p:messages id="messages" ></p:messages>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="row" >
                             <div class="col-md-6" >
                                 <common:patient_details patient="#{opdBillController.patient}"/>
