--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -11,6 +11,7 @@
       xmlns:pat="http://java.sun.com/jsf/composite/patient"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
+
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:panelGroup rendered="#{!(webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier'))}">
@@ -19,187 +20,80 @@
                 <h:panelGroup
                     rendered="#{webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier')}">
                     <h:form >
+                        <div class="row">
+                            <div class="col-12" style="border: 1px solid red;">
+                                <!-- Command Buttons -->
+                                <div class="d-flex justify-content-start">
+                                    <!-- Print Button -->
+                                    <p:commandButton value="Print" 
+                                                     class="ui-button-success m-1"
+                                                     icon="fa fa-print"
+                                                     ajax="false">
+                                        <p:printer target="groupPrint" />
+                                    </p:commandButton>
 
-                        <p:commandButton value="Print" 
-                                         process="@this" 
-                                         update="@all" 
-                                         type="button"  
-                                         ajax="false">
-                            <p:printer target="groupPrint" ></p:printer>
-                        </p:commandButton>
+                                    <!-- Print Lookup Button -->
+                                    <p:commandButton value="Print Lookup" 
+                                                     class="ui-button-primary m-1"
+                                                     icon="fa fa-search"
+                                                     action="#{opdBillController.navigateToSearchPatients()}"
+                                                     ajax="false">
+                                    </p:commandButton>
 
-                        <p:selectOneMenu value="#{sessionController.departmentPreference.opdBillPaperType}" >
-                            <f:selectItem itemLabel="Please Select Paper Type" />
-                            <f:selectItems value="#{enumController.paperTypes}" ></f:selectItems>
-                        </p:selectOneMenu>
-                        <p:commandButton ajax="false" value="Refresh" ></p:commandButton>
+                                    <!-- Patient Profile Button -->
+                                    <p:commandButton value="Patient Profile" 
+                                                     class="ui-button-secondary m-1"
+                                                     icon="fa fa-user"
+                                                     action="#{patientController.navigateToOpdPatientProfile()}"
+                                                     ajax="false">
+                                        <f:setPropertyActionListener 
+                                            value="#{opdBillController.bills[0].patient}" 
+                                            target="#{patientController.current}" />
+                                    </p:commandButton>
+
+                                    <p:commandButton 
+                                        ajax="false" 
+                                        value="To Bill Details" 
+                                        class="ui-button-warning m-1"
+                                        icon="fa fa-file-invoice"
+                                        action="#{billController.cancellAll}" />
+                                </div>
+
+                                <!-- Controls Section -->
+                                <div class="d-flex justify-content-end">
+                                    <p:outputLabel value="Paper Type" class="m-1"></p:outputLabel>
+                                    <p:selectOneMenu value="#{sessionController.departmentPreference.opdBillPaperType}" class="m-1">
+                                        <f:selectItem itemLabel="Please Select Paper Type" />
+                                        <f:selectItems value="#{enumController.paperTypes}" />
+                                    </p:selectOneMenu>
+                                    <p:commandButton ajax="false" icon="fa fa-sync-alt" class="ui-button m-1" title="Redraw Bill"></p:commandButton>
+                                </div>
+                            </div>
+                        </div>
+
+
 
                         <h:panelGroup id="groupPrint" >
-
-                            <h1>#{opdBillController.bills}</h1>
-
                             <h:panelGroup rendered="#{sessionController.departmentPreference.opdBillPaperType eq 'FiveFivePaper'}" >
                                 <ui:repeat value="#{opdBillController.bills}" var="ffb">
-                                    <h1>#{ffb}</h1>
                                     <prints:five_five_paper_with_headings bill="#{ffb}"/>                        
                                 </ui:repeat>
                             </h:panelGroup>
-
                             <h:panelGroup rendered="#{sessionController.departmentPreference.opdBillPaperType eq 'FiveFivePrintedPaper'}" >
                                 <ui:repeat value="#{opdBillController.bills}" var="ffpp">
-                                    <h1>#{ffpp}</h1>
                                     <prints:five_five_paper_without_headings bill="#{ffpp}" dup="false"/>
                                 </ui:repeat>
                             </h:panelGroup>
-
                             <h:panelGroup rendered="#{sessionController.departmentPreference.opdBillPaperType eq 'PosPaper'}" >
                                 <ui:repeat value="#{opdBillController.bills}" var="pp">
-                                    <h1>#{pp}</h1>
                                     <prints:posOpdBill bill="#{pp}" duplicate="false"/>                        
                                 </ui:repeat>
                             </h:panelGroup>
-
                         </h:panelGroup>
-
-
 
                     </h:form>
 
-
-
-
-
-                    <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePrintedPaper'}">
-                        <div class="nonPrintBlock">
-                            <p:commandButton value="Print" 
-                                             process="@this" 
-                                             update="@all" 
-                                             type="button"  
-                                             ajax="false">
-                                <p:printer target="gpBillPreview" ></p:printer>
-                            </p:commandButton>
-
-                            <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
-                            </p:commandButton>
-                            <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
-                                             onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                         return false;"/>
-                        </div>
-                        <p:outputLabel value="Balance = #{billController.cashBalance}" style="font-weight: bold;font-size: 20pt;color: red;"/>
-                        <h:panelGroup id="gpBillPreview">
-                            <ui:repeat value="#{billController.bills}" var="bill">
-                                <prints:five_five_paper_without_headings bill="#{bill}" dup="false"/>
-                            </ui:repeat>
-                        </h:panelGroup>
-                    </h:panelGroup>
-
-                    <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePaper'}">
-                        <div class="nonPrintBlock">
-                            <p:commandButton value="Print" ajax="false" action="#"  >
-                                <p:printer target="fiveFivePaperWithHeadings" ></p:printer>
-                            </p:commandButton>
-
-                            <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
-                            </p:commandButton>
-
-                            <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
-                                             onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                         return false;"/>
-                        </div>
-                        <h:panelGroup id="fiveFivePaperWithHeadings">
-                            <ui:repeat value="#{billController.bills}" var="b">
-                                <prints:five_five_paper_with_headings bill="#{b}"/>                        
-                            </ui:repeat>
-                        </h:panelGroup>
-                    </h:panelGroup>
-
-                    <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'PosPaper'}">
-                        <h:panelGrid rendered="false">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="gpPosBill" ></p:printer>
-                                </p:commandButton>
-
-
-
-                                <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
-                                </p:commandButton>
-
-                                <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
-                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                             return false;"/>
-                            </div>
-                            <h:panelGroup id="gpPosBill">
-                                <div style="page-break-after: always;">
-
-                                    <ui:repeat value="#{billController.bills}" var="b">
-                                        <prints:posOpdBill bill="#{b}" duplicate="false"/>                        
-                                    </ui:repeat>
-                                </div>
-                                <div></div>
-                                <div style="page-break-after: always;">
-
-                                    <ui:repeat value="#{billController.bills}" var="b">
-                                        <prints:posOpdBill bill="#{b}" duplicate="false"/>                        
-                                    </ui:repeat>
-                                </div>
-                            </h:panelGroup>
-                        </h:panelGrid>
-
-
-
-
-                        <h:panelGrid rendered="false">
-                            <div class="nonPrintBlock">
-                                <p:commandButton value="Print" ajax="false" action="#"  >
-                                    <p:printer target="gpPosBillWithoutLogo" ></p:printer>
-                                </p:commandButton>
-
-                                <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
-                                </p:commandButton>
-
-                                <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
-                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                             return false;"/>
-                            </div>
-                            <h:panelGroup id="gpPosBillWithoutLogo">
-                                <div style="page-break-after: always;">
-
-                                    <ui:repeat value="#{billController.bills}" var="b">
-                                        <prints:posOpdBillWithoutLogo bill="#{b}" duplicate="false"/>                        
-                                    </ui:repeat>
-                                </div>     
-                                <div style="page-break-after: always;">
-
-                                    <ui:repeat value="#{billController.bills}" var="b">
-                                        <prints:posOpdBillWithoutLogo bill="#{b}" duplicate="false"/>                        
-                                    </ui:repeat>
-                                </div>  
-                            </h:panelGroup>
-                        </h:panelGrid>
-
-                    </h:panelGroup>
-
-
-
-
-
-
-
-
-
-
                 </h:panelGroup>
-
-
-
-
-
-
-
-
-
-
             </ui:define>
         </ui:composition>
     </h:body>
