--- a/src/main/webapp/inward/inpatient_search.xhtml
+++ b/src/main/webapp/inward/inpatient_search.xhtml
@@ -17,21 +17,20 @@
                         <div class="col-2">
                             <div class="mb-3">
                                 <p:outputLabel value="Date of Admission from " styleClass="form-label"></p:outputLabel>
-                                <p:datePicker 
+                                <p:calendar
                                     value="#{admissionController.fromDate}" 
                                     class="w-100"
                                     inputStyleClass="form-control"
-                                    showTime="true"
+                                    
                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}"          >
-                                </p:datePicker>
+                                </p:calendar>
                                 <p:outputLabel value="Date of Admission to " styleClass="form-label"></p:outputLabel>
-                                <p:datePicker 
+                                <p:calendar 
                                     value="#{admissionController.toDate}" 
                                     class="w-100"
                                     inputStyleClass="form-control"
-                                    showTime="true"
                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}"          >
-                                </p:datePicker>
+                                </p:calendar>
                             </div>
                             <div class="mb-3">
                                 <p:outputLabel value="BHT Number" styleClass="form-label"></p:outputLabel>
@@ -91,42 +90,45 @@
                                 <p:commandButton ajax="false"
                                                  value="Search"
                                                  action="#{admissionController.searchAdmissions}"
-                                                 styleClass="btn btn-primary"></p:commandButton>
+                                                 class="w-100"></p:commandButton>
                             </div>
                         </div>
 
                         <div class="col-10" >
                             <p:dataTable value="#{admissionController.items}" var="a" rowKey="#{a.id}" paginator="true" rows="10"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                         rowsPerPageTemplate="5,10,15">
+                                         rowsPerPageTemplate="5,10,15" class="w-100">
 
-                                <p:column headerText="BHT No" filterBy="#{a.bhtNo}" filterMatchMode="contains">
-                                    <h:outputText value="#{a.bhtNo}" ></h:outputText>
+                                <p:column headerText="BHT No" filterBy="#{a.bhtNo}" filterMatchMode="contains" class="w-100">
+                                    <h:outputText value="#{a.bhtNo}" class="w-100"></h:outputText>
                                 </p:column>
-                                <p:column headerText="Patient Name" filterBy="#{a.patient.person.name}" filterMatchMode="contains">
+                                <p:column headerText="Patient Name" filterBy="#{a.patient.person.name}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.patient.person.name}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Phone/Mobile" filterBy="#{a.patient.person.phone}, #{a.patient.person.mobile}" filterMatchMode="contains">
+                                <p:column headerText="Phone/Mobile" filterBy="#{a.patient.person.phone}, #{a.patient.person.mobile}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.patient.person.phone}" ></h:outputText>
                                     <h:outputText value="#{a.patient.person.mobile}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Address" filterBy="#{a.patient.person.address}" filterMatchMode="contains">
+                                <p:column headerText="Address" filterBy="#{a.patient.person.address}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.patient.person.address}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="PHN" filterBy="#{a.patient.phn}" filterMatchMode="contains">
+                                <p:column headerText="PHN" filterBy="#{a.patient.phn}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.patient.phn}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains">
-                                    <h:outputText value="Discharged - #{a.discharged}" ></h:outputText><br/>
-                                    <h:outputText value="Bill Finalized - #{a.paymentFinalized}" ></h:outputText>
+                                <p:column headerText="Discharge Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100">
+                                    <h:outputText value="#{a.discharged}" ></h:outputText><br/>
                                 </p:column>
-                                <p:column headerText="Current Room" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains">
+                                <p:column headerText="Bill Finalized Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100">
+                                   
+                                    <h:outputText value="#{a.paymentFinalized}" ></h:outputText>
+                                </p:column>
+                                <p:column headerText="Current Room" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.currentPatientRoom.name}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Admission Date" filterBy="#{a.dateOfAdmission}" filterMatchMode="contains">
+                                <p:column headerText="Admission Date" filterBy="#{a.dateOfAdmission}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.dateOfAdmission}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Discharge Date" filterBy="#{a.dateOfDischarge}" filterMatchMode="contains">
+                                <p:column headerText="Discharge Date" filterBy="#{a.dateOfDischarge}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.dateOfDischarge}" ></h:outputText>
                                 </p:column>
                                 <p:column headerText="Actions">
