--- a/src/main/webapp/inward/inpatient_search.xhtml
+++ b/src/main/webapp/inward/inpatient_search.xhtml
@@ -25,12 +25,13 @@
                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}"          >
                                 </p:calendar>
                                 <p:outputLabel value="Date of Admission to " styleClass="form-label"></p:outputLabel>
-                                <p:datePicker 
+                                <p:calendar 
                                     value="#{admissionController.toDate}" 
                                     class="w-100"
                                     inputStyleClass="form-control"
+                                    maxdate="#{commonFunctionsController.endOfDay}"
                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}"          >
-                                </p:datePicker>
+                                </p:calendar>
                             </div>
                             <div class="mb-3">
                                 <p:outputLabel value="BHT Number" styleClass="form-label"></p:outputLabel>
@@ -99,7 +100,7 @@
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                          rowsPerPageTemplate="5,10,15" class="w-100">
 
-                                <p:column headerText="BHT No" filterBy="#{a.bhtNo}" filterMatchMode="contains" class="w-100">
+                                <p:column headerText="BHT No" filterBy="#{a.bhtNo}" filterMatchMode="contains" class="w-100 text-center">
                                     <h:outputText value="#{a.bhtNo}" class="w-100"></h:outputText>
                                 </p:column>
                                 <p:column headerText="Patient Name" filterBy="#{a.patient.person.name}" filterMatchMode="contains" class="w-100">
@@ -107,29 +108,32 @@
                                 </p:column>
                                 <p:column headerText="Phone/Mobile" filterBy="#{a.patient.person.phone}, #{a.patient.person.mobile}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.patient.person.phone}" ></h:outputText>
-                                    <h:outputText value="#{a.patient.person.mobile}" ></h:outputText>
+                                    <h:outputText value="&nbsp;&nbsp;" ></h:outputText>
+                                    <h:outputText value=", #{a.patient.person.mobile}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Address" filterBy="#{a.patient.person.address}" filterMatchMode="contains" class="w-100">
+                                <p:column headerText="Address" filterBy="#{a.patient.person.address}" filterMatchMode="contains" class="w-100 text-center">
                                     <h:outputText value="#{a.patient.person.address}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="PHN" filterBy="#{a.patient.phn}" filterMatchMode="contains" class="w-100">
+                                <p:column headerText="PHN" filterBy="#{a.patient.phn}" filterMatchMode="contains" class="w-100 text-center">
                                     <h:outputText value="#{a.patient.phn}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Discharge Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100">
-                                    <h:outputText value="#{a.discharged}" ></h:outputText><br/>
-                                </p:column>
-                                <p:column headerText="Bill Finalized Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100">
-                                   
-                                    <h:outputText value="#{a.paymentFinalized}" ></h:outputText>
+                               
+                                <p:column headerText="Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100 text-center">
+                                    <h:outputText value="Discharge Status : #{a.discharged}" ></h:outputText><br/>
+                                    <h:outputText value="Bill Status : #{a.paymentFinalized}" ></h:outputText>
                                 </p:column>
                                 <p:column headerText="Current Room" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100">
                                     <h:outputText value="#{a.currentPatientRoom.name}" ></h:outputText>
                                 </p:column>
                                 <p:column headerText="Admission Date" filterBy="#{a.dateOfAdmission}" filterMatchMode="contains" class="w-100">
-                                    <h:outputText value="#{a.dateOfAdmission}" ></h:outputText>
+                                    <h:outputLabel value="#{a.dateOfAdmission}" >
+                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateFormat}" />
+                                    </h:outputLabel>
                                 </p:column>
                                 <p:column headerText="Discharge Date" filterBy="#{a.dateOfDischarge}" filterMatchMode="contains" class="w-100">
-                                    <h:outputText value="#{a.dateOfDischarge}" ></h:outputText>
+                                    <h:outputText value="#{a.dateOfDischarge}" >
+                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateFormat}" />
+                                    </h:outputText>
                                 </p:column>
                                 <p:column headerText="Actions">
                                     <p:commandButton ajax="false" 
