--- a/src/main/webapp/inward/inpatient_search.xhtml
+++ b/src/main/webapp/inward/inpatient_search.xhtml
@@ -16,7 +16,7 @@
                     <div class="row m-0 p-0" >
                         <div class="col-2">
                             <div class="mb-3">
-                                <p:outputLabel value="Date of Admission from " styleClass="form-label"></p:outputLabel>
+                                <p:outputLabel value="Date of Admission from" styleClass="form-label"></p:outputLabel>
                                 <p:calendar
                                     value="#{admissionController.fromDate}" 
                                     class="w-100"
@@ -24,7 +24,7 @@
                                     maxdate="#{commonFunctionsController.endOfDay}"
                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}"          >
                                 </p:calendar>
-                                <p:outputLabel value="Date of Admission to " styleClass="form-label"></p:outputLabel>
+                                <p:outputLabel value="Date of Admission to" styleClass="form-label"></p:outputLabel>
                                 <p:calendar 
                                     value="#{admissionController.toDate}" 
                                     class="w-100"
@@ -96,52 +96,84 @@
                         </div>
 
                         <div class="col-10" >
-                            <p:dataTable value="#{admissionController.items}" var="a" rowKey="#{a.id}" paginator="true" rows="10"
+                            <p:dataTable value="#{admissionController.items}" 
+                                         var="a" 
+                                         rowKey="#{a.id}" 
+                                         paginator="true" rows="10"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                         rowsPerPageTemplate="5,10,15" class="w-100">
+                                         rowsPerPageTemplate="5,10,15">
 
-                                <p:column headerText="BHT No" filterBy="#{a.bhtNo}" filterMatchMode="contains" class="w-100 text-center">
-                                    <h:outputText value="#{a.bhtNo}" class="w-100"></h:outputText>
+                                <p:column headerText="BHT No" filterBy="#{a.bhtNo}" filterMatchMode="contains" >
+                                    <h:outputText value="#{a.bhtNo}"></h:outputText>
                                 </p:column>
-                                <p:column headerText="Patient Name" filterBy="#{a.patient.person.name}" filterMatchMode="contains" class="w-100">
+                                <p:column headerText="Patient Name" filterBy="#{a.patient.person.name}" filterMatchMode="contains">
                                     <h:outputText value="#{a.patient.person.name}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Phone/Mobile" filterBy="#{a.patient.person.phone}, #{a.patient.person.mobile}" filterMatchMode="contains" class="w-100">
+                                <p:column headerText="Phone/Mobile" filterBy="#{a.patient.person.phone}, #{a.patient.person.mobile}" filterMatchMode="contains">
                                     <h:outputText value="#{a.patient.person.phone}" ></h:outputText>
                                     <h:outputText value="&nbsp;&nbsp;" ></h:outputText>
                                     <h:outputText value=", #{a.patient.person.mobile}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Address" filterBy="#{a.patient.person.address}" filterMatchMode="contains" class="w-100 text-center">
+                                <p:column headerText="Address" filterBy="#{a.patient.person.address}" filterMatchMode="contains" >
                                     <h:outputText value="#{a.patient.person.address}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="PHN" filterBy="#{a.patient.phn}" filterMatchMode="contains" class="w-100 text-center">
-                                    <h:outputText value="#{a.patient.phn}" ></h:outputText>
+                                <p:column headerText="Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains">
+                                    <h:panelGroup>
+                                        <!-- Discharge Status -->
+                                        <h:panelGroup rendered="#{a.discharged}">
+                                            <i class="fa fa-fw fa-bed" title="Discharged"></i>
+                                            <i class="fa fa-check" title="Discharged"></i>
+                                        </h:panelGroup>
+                                        <h:panelGroup rendered="#{not a.discharged}">
+                                            <i class="fa fa-fw fa-bed" title="Not Discharged"></i>
+                                            <i class="fa fa-times" title="Not Discharged"></i>
+                                        </h:panelGroup>
+                                    </h:panelGroup>
+                                    <p:spacer width="20" ></p:spacer>
+                                    <h:panelGroup>
+                                        <!-- Bill Status -->
+                                        <h:panelGroup rendered="#{a.billSession}">
+                                            <i class="fa fa-fw fa-money" title="Payment Finalized"></i>
+                                            <i class="fa fa-check" title="Payment Finalized"></i>
+                                        </h:panelGroup>
+                                        <h:panelGroup rendered="#{not a.paymentFinalized}">
+                                            <i class="fa fa-fw fa-money-bill-alt" title="Payment Pending"></i>
+                                            <i class="fa fa-times" title="Payment Pending"></i>
+                                        </h:panelGroup>
+                                    </h:panelGroup>
                                 </p:column>
-                               
-                                <p:column headerText="Status" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100 text-center">
-                                    <h:outputText value="Discharge Status : #{a.discharged}" ></h:outputText><br/>
-                                    <h:outputText value="Bill Status : #{a.paymentFinalized}" ></h:outputText>
-                                </p:column>
-                                <p:column headerText="Current Room" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains" class="w-100">
+
+                                <p:column headerText="Current Room" filterBy="#{a.currentPatientRoom.name}" filterMatchMode="contains">
                                     <h:outputText value="#{a.currentPatientRoom.name}" ></h:outputText>
                                 </p:column>
-                                <p:column headerText="Admission Date" filterBy="#{a.dateOfAdmission}" filterMatchMode="contains" class="w-100">
+                                <p:column headerText="Admission Date" filterBy="#{a.dateOfAdmission}" filterMatchMode="contains">
                                     <h:outputLabel value="#{a.dateOfAdmission}" >
                                         <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateFormat}" />
                                     </h:outputLabel>
                                 </p:column>
-                                <p:column headerText="Discharge Date" filterBy="#{a.dateOfDischarge}" filterMatchMode="contains" class="w-100">
+                                <p:column headerText="Discharge Date" filterBy="#{a.dateOfDischarge}" filterMatchMode="contains">
                                     <h:outputText value="#{a.dateOfDischarge}" >
                                         <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateFormat}" />
                                     </h:outputText>
                                 </p:column>
-                                <p:column headerText="Actions">
+                                <p:column headerText="Actions" >
+                                    <h:outputText value="#{a.currentPatientRoom.name}" ></h:outputText>
                                     <p:commandButton ajax="false" 
-                                                     value="Inpatient Care Dashboard" 
-                                                     action="#{admissionController.navigateToAdmissionProfilePage}" >
-                                        <f:setPropertyActionListener value="#{a}" target="#{admissionController.current}" ></f:setPropertyActionListener>
+                                                     class="m-1"
+                                                     icon="fa fa-fw fa-bed" 
+                                                     action="#{admissionController.navigateToAdmissionProfilePage}">
+                                        <f:setPropertyActionListener value="#{a}" target="#{admissionController.current}" />
                                     </p:commandButton>
+
+                                    <p:commandButton ajax="false" 
+                                                     class="m-1"
+                                                     icon="fa fa-user-md" 
+                                                     action="#{patientController.navigateToOpdPatientProfile()}">
+                                        <f:setPropertyActionListener value="#{a.patient}" target="#{patientController.current}" />
+                                    </p:commandButton>
+
                                 </p:column>
+
                             </p:dataTable>
 
                         </div>
