--- a/src/main/webapp/inward/inward_admission.xhtml
+++ b/src/main/webapp/inward/inward_admission.xhtml
@@ -286,7 +286,35 @@
 
             </h:panelGroup>
             <p:panel rendered="#{admissionController.printPreview}">
-                <p:commandButton ajax="false" value="New Admission" actionListener="#{admiprepereToAdmitNewPatienttroller.makeNull}" />                   
+
+                <p:commandButton 
+                    ajax="false" 
+                    immediate="true"
+                    value="Patient Lookup" 
+                    class="ui-button-warning mx-1" 
+                    action="#{patientController.navigateToSearchPatients()}" 
+                    icon="fa fa-search" /> <!-- Font Awesome icon for search -->
+
+                <p:commandButton 
+                    ajax="false" 
+                    immediate="true"
+                    class="ui-button-warning mx-1" 
+                    value="Patient Profile" 
+                    action="#{patientController.navigateToOpdPatientProfile()}" 
+                    icon="fa fa-user" > <!-- Font Awesome icon for user -->
+                    <f:setPropertyActionListener value="#{admissionController.current.patient}" target="#{patientController.current}" ></f:setPropertyActionListener>
+                </p:commandButton>
+                
+                <p:commandButton 
+                    ajax="false" 
+                    immediate="true"
+                    class="ui-button-warning mx-1" 
+                    value="Inpatient Profile" 
+                    action="#{admissionController.navigateToAdmissionProfilePage}" 
+                    icon="fa fa-fw fa-bed" > <!-- Font Awesome icon for user -->
+                    <f:setPropertyActionListener value="#{admissionController.current.patient}" target="#{patientController.current}" ></f:setPropertyActionListener>
+                </p:commandButton>
+
                 <bill:bht admission="#{admissionController.current}"/>
             </p:panel>
 
