--- a/src/main/webapp/inward/inward_bill_intrim.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim.xhtml
@@ -44,7 +44,7 @@
                                 <p:column>
                                     #{myItem.patient.person.name}
                                 </p:column>
-                                
+
                             </p:autoComplete>   
                             <p:commandButton ajax="false"  
                                              value="Select" 
@@ -198,29 +198,27 @@
                                 </h:panelGrid>
                             </div>
                             <div class="col-md-4">
-                                <p:panel>
+                                <p:dataTable id="sum" 
+                                             value="#{bhtSummeryController.chargeItemTotals}" 
+                                             var="c" 
+                                             scrollHeight="350"
+                                             scrollable="true"
+                                             scrollRows="10"
+                                             >
                                     <f:facet name="header">
                                         <h:outputText styleClass="fas fa-money-bill" />
                                         <p:outputLabel value="Charges" class="mx-2"/>
                                     </f:facet>
+                                    <p:column headerText="Charge Type" >
+                                        <h:outputLabel value="#{c.inwardChargeType.label}"/>
+                                    </p:column>
+                                    <p:column  sortBy="#{c.total}"  headerText="Total">
+                                        <h:outputLabel value="#{c.total}">
+                                            <f:convertNumber pattern="#,##0.00"/>
+                                        </h:outputLabel>
+                                    </p:column>
+                                </p:dataTable>
 
-                                    <p:dataTable id="sum" 
-                                                 value="#{bhtSummeryController.chargeItemTotals}" 
-                                                 var="c" 
-                                                 scrollHeight="220"
-                                                 scrollable="true"
-
-                                                 >
-                                        <p:column headerText="Charge Type" >
-                                            <h:outputLabel value="#{c.inwardChargeType.label}"/>
-                                        </p:column>
-                                        <p:column  sortBy="#{c.total}"  headerText="Total">
-                                            <h:outputLabel value="#{c.total}">
-                                                <f:convertNumber pattern="#,##0.00"/>
-                                            </h:outputLabel>
-                                        </p:column>
-                                    </p:dataTable>
-                                </p:panel>
                             </div>
                         </div>
 
