--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -20,10 +20,10 @@
                 <h:panelGroup
                     rendered="#{webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier')}">
                     <h:form >
-                        <div class="row">
-                            <div class="col-12" style="border: 1px solid red;">
+                        <div class="row mb-2">
+                            <div class="col-12 d-flex justify-content-between ">
                                 <!-- Command Buttons -->
-                                <div class="d-flex justify-content-start">
+                                <div class="d-flex m-2">
                                     <!-- Print Button -->
                                     <p:commandButton value="Print" 
                                                      class="ui-button-success m-1"
@@ -60,9 +60,9 @@
                                 </div>
 
                                 <!-- Controls Section -->
-                                <div class="d-flex justify-content-end">
-                                    <p:outputLabel value="Paper Type" class="m-1"></p:outputLabel>
-                                    <p:selectOneMenu value="#{sessionController.departmentPreference.opdBillPaperType}" class="m-1">
+                                <div class="d-flex m-2">
+                                    <p:outputLabel value="Paper Type" class="fs-5 m-2"></p:outputLabel>
+                                    <p:selectOneMenu value="#{sessionController.departmentPreference.opdBillPaperType}" class="m-1" style="width: 13em;">
                                         <f:selectItem itemLabel="Please Select Paper Type" />
                                         <f:selectItems value="#{enumController.paperTypes}" />
                                     </p:selectOneMenu>
