--- a/src/main/webapp/inward/inward_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_bill_service.xhtml
@@ -195,7 +195,7 @@
 
                                                     <div class="row m-1">
                                                         <div class="col-4">
-                                                            <h:outputLabel value="Investigation"/>
+                                                            <h:outputLabel value="Investigation or Service"/>
                                                         </div>
                                                         <div class="col-8">
                                                             <p:autoComplete  widgetVar="aIx" id="acIx" forceSelection="true" 
