--- a/src/main/webapp/inward/admission_profile.xhtml
+++ b/src/main/webapp/inward/admission_profile.xhtml
@@ -17,62 +17,31 @@
                     <p:outputLabel value="Inpatient Dashboard" ></p:outputLabel>
                 </f:facet>
                 <div class="row" >
-                    <div class="col-4" >
+                    <div class="col-3" >
                         <common:patient_details patient="#{admissionController.current.patient}"/>
-                    </div>
-                    <div class="col-5" >
                         <common:admission_details admission="#{admissionController.current}" ></common:admission_details>
                     </div>
-                    <div class="col-3" >
-                        <p:panelGrid columns="1" >
+                    <div class="col-2" >
+                        <p:panelGrid 
+                            class="w-100"
+                            columns="1" >
+                            <f:facet name="header" >
+                                <p:outputLabel value="Admission &amp; Billing" ></p:outputLabel>
+                            </f:facet>
                             <p:commandButton 
                                 value="Edit Admission" 
                                 action="#{admissionController.navigateToEditAdmission}" 
                                 icon="fa fa-edit"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{admissionController.current}" 
                                     target="#{bhtEditController.current}" ></f:setPropertyActionListener>
                             </p:commandButton>
                             <p:commandButton 
-                                rendered="#{not admissionController.current.discharged and not admissionController.current.paymentFinalized}" 
-                                action="#{bhtSummeryController.navigateToIntrimBillFromPatientProfile()}"
-                                value="Interim Bill" 
-                                class="w-100"
-                                icon="fa fa-file">
-                                <f:setPropertyActionListener 
-                                    value="#{admissionController.current}" 
-                                    target="#{bhtSummeryController.patientEncounter}" ></f:setPropertyActionListener>
-                            </p:commandButton>
-                            <p:commandButton 
-                                value="Estimated Bill" 
-                                icon="fa fa-calculator"
-                                action="#{bhtSummeryController.navigateToIntrimBillEstimate}"
-                                 class="w-100">
-                                <f:setPropertyActionListener 
-                                    value="#{admissionController.current}" 
-                                    target="#{bhtSummeryController.patientEncounter}" ></f:setPropertyActionListener>
-                            </p:commandButton>
-                            <p:commandButton 
-                                rendered="#{admissionController.current.discharged}" 
-                                value="Final Bill" 
-                                action="#{inwardSearch.navigateToFinalBillForAdmission}"
-                                icon="fa fa-file"
-                                 class="w-100">
-                                <f:setPropertyActionListener 
-                                    value="#{admissionController.current}" 
-                                    target="#{inwardSearch.admission}" ></f:setPropertyActionListener>
-                            </p:commandButton>
-
-
-
-
-
-                            <p:commandButton 
                                 value="Room Change" 
                                 action="#{admissionController.navigateToRoomChange}" 
                                 icon="fa fa-exchange-alt"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{admissionController.current}" 
                                     target="#{roomChangeController.current}" />
@@ -88,73 +57,113 @@
                                     value="#{admissionController.current}" 
                                     target="#{roomChangeController.current}" />
                             </p:commandButton>
-
                             <p:commandButton 
-                                value="Add Services" 
-                                action="#{admissionController.navigateToAddServices}" 
-                                actionListener="#{billBhtController.makeNull}"
+                                rendered="#{not admissionController.current.discharged and not admissionController.current.paymentFinalized}" 
+                                action="#{bhtSummeryController.navigateToIntrimBillFromPatientProfile()}"
+                                value="Interim Bill" 
+                                class="w-100"
+                                icon="fa fa-file">
+                                <f:setPropertyActionListener 
+                                    value="#{admissionController.current}" 
+                                    target="#{bhtSummeryController.patientEncounter}" ></f:setPropertyActionListener>
+                            </p:commandButton>
+                            <p:commandButton 
+                                value="Estimated Bill" 
+                                icon="fa fa-calculator"
+                                action="#{bhtSummeryController.navigateToIntrimBillEstimate}"
+                                class="w-100">
+                                <f:setPropertyActionListener 
+                                    value="#{admissionController.current}" 
+                                    target="#{bhtSummeryController.patientEncounter}" ></f:setPropertyActionListener>
+                            </p:commandButton>
+                            <p:commandButton 
+                                rendered="#{admissionController.current.discharged}" 
+                                value="Final Bill" 
+                                action="#{inwardSearch.navigateToFinalBillForAdmission}"
+                                icon="fa fa-file"
+                                class="w-100">
+                                <f:setPropertyActionListener 
+                                    value="#{admissionController.current}" 
+                                    target="#{inwardSearch.admission}" ></f:setPropertyActionListener>
+                            </p:commandButton>
+
+                        </p:panelGrid>
+                    </div>
+                    <div class="col-2"  >
+                        <p:panelGrid 
+                            columns="1" 
+                            class="w-100">
+                            <f:facet name="header" >
+                                <p:outputLabel value="Services" ></p:outputLabel>
+                            </f:facet>
+                            <p:commandButton 
+                                value="Add Services &amp; Investigations" 
+                                action="#{billBhtController.navigateToAddServicesFromAdmissionProfile()}" 
                                 icon="fa fa-plus-square"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{admissionController.current}" 
-                                    target="#{billBhtController.current}" />
+                                    target="#{billBhtController.patientEncounter}" />
                             </p:commandButton>
-
                             <p:commandButton 
-                                value="Add Outside Charge" 
-                                action="#{admissionController.navigateToAddOutsideCharge}" 
-                                actionListener="#{inwardAdditionalChargeController.makeNull}"
+                                value="Add Outside Charges" 
+                                action="#{inwardAdditionalChargeController.navigateToAddOutsideChargeFromInpatientProfile()}" 
                                 icon="fa fa-external-link-square-alt"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{admissionController.current}" 
-                                    target="#{inwardAdditionalChargeController.current}" />
+                                    target="#{inwardAdditionalChargeController.current.patientEncounter}" />
                             </p:commandButton>
-
                             <p:commandButton 
-                                value="Add Professional Fee" 
-                                action="#{admissionController.navigateToAddProfessionalFee}" 
-                                actionListener="#{inwardProfessionalBillController.makeNull}"
+                                value="Add Professional Fees" 
+                                action="#{inwardProfessionalBillController.navigateToAddProfessionalFeesFromInpatientProfile()}" 
                                 icon="fa fa-user-md"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{admissionController.current}" 
-                                    target="#{inwardProfessionalBillController.current}" />
+                                    target="#{inwardProfessionalBillController.current.patientEncounter}" />
                             </p:commandButton>
-
                             <p:commandButton 
                                 value="Add Estimated Professional Fee" 
-                                action="#{admissionController.navigateToAddEstimatedProfessionalFee}" 
-                                actionListener="#{inwardProfessionalBillController.makeNull}"
+                                action="#{inwardProfessionalBillController.navigateToAddEstimatedProfessionalFeeFromInpatientProfile()}" 
                                 icon="fa fa-user-md"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{admissionController.current}" 
-                                    target="#{inwardProfessionalBillController.current}" />
+                                    target="#{inwardProfessionalBillController.current.patientEncounter}" />
                             </p:commandButton>
 
                             <p:commandButton 
                                 value="Add Timed Services" 
-                                action="#{timedItemController.inwardTimedServiceConsumeInward}" 
-                                actionListener="#{inwardTimedItemController.makeNull}"
+                                action="#{inwardTimedItemController.navigateToAddInwardTimedServicesFromMenu()}" 
                                 icon="fa fa-clock"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{timedItemController.current}" 
-                                    target="#{addTimedServicesController.current}" />
+                                    target="#{inwardTimedItemController.current.patientEncounter}" />
                             </p:commandButton>
 
+
+
+                        </p:panelGrid>
+                    </div>
+                    <div class="col-2"  >
+                        <p:panelGrid 
+                            columns="1" 
+                            class="w-100">
+                            <f:facet name="header" >
+                                <p:outputLabel value="Pharmaceuticals &amp; Consumables" ></p:outputLabel>
+                            </f:facet>
                             <p:commandButton 
                                 value="Pharmacy BHT Request" 
                                 action="#{admissionController.navigateToPharmacyBhtRequest}" 
                                 actionListener="#{pharmacySaleBhtController.resetAll}"
                                 icon="fa fa-prescription-bottle-alt"
-                                 class="w-100">
+                                class="w-100">
                                 <f:setPropertyActionListener 
                                     value="#{admissionController.current}" 
                                     target="#{pharmacySaleBhtController.patientEncounter}" />
                             </p:commandButton>
-                          
                         </p:panelGrid>
                     </div>
                 </div>
